tests/snapshots/tbir__cov_cross_bins_emitted_cpp.snap
---
source: tests/tbir.rs
expression: "emit_fixture_cpp(\"cov_cross_bins_test.harc\")"
---
// Auto-generated by harc — do not edit.
// Codegen: tbir (TB-IR loop-switch backend).
// HARC test: CovCrossBinsTest

#ifdef __clang__
#pragma clang optimize off
#endif

#include "VTop.h"
#include "verilated.h"
#if VM_COVERAGE
#include "verilated_cov.h"
#endif
#if defined(HARC_TRACE_VCD)
#include "verilated_vcd_c.h"
#define HARC_TRACE_ENABLED 1
using HarcTraceC = VerilatedVcdC;
#elif defined(HARC_TRACE_FST)
#include "verilated_fst_c.h"
#define HARC_TRACE_ENABLED 1
using HarcTraceC = VerilatedFstC;
#else
#define HARC_TRACE_ENABLED 0
#endif
#include <cstdio>
#include <cstdint>
#include <cstdlib>
#include <cstdarg>
#include <cstring>
#include <string>
#include <array>
#include <vector>
#include <deque>
#include <functional>
#include <thread>
#include <atomic>
#include "harc_thread_rt.h"
#include "harc_random_rt.h"
#include "harc_queue_rt.h"
#include "harc_trace_rt.h"
#include "harc_log_rt.h"

template<typename DUT>
static void _harc_eval_negedge(DUT* dut) {
    if constexpr (requires { dut->clk; }) { dut->clk = 0; }
    dut->eval();
}
template<typename DUT>
static void _harc_eval_posedge(DUT* dut) {
    if constexpr (requires { dut->clk; }) { dut->clk = 1; }
    dut->eval();
}

struct CountCov {
    struct {
        uint64_t low = 0;
        uint64_t mid = 0;
        uint64_t high = 0;
    } cp_count;
    struct {
        uint64_t en0 = 0;
        uint64_t en1 = 0;
    } cp_en;
    uint64_t _cross_2_cp_count__cp_en[6] = {};

    void report(harc_rt::log::HarcLogContext& log_ctx) const {
        uint64_t _total = 5; uint64_t _hit = 0;
        if (cp_count.low > 0) _hit++;
        if (cp_count.mid > 0) _hit++;
        if (cp_count.high > 0) _hit++;
        if (cp_en.en0 > 0) _hit++;
        if (cp_en.en1 > 0) _hit++;
        harc_rt::log::harc_print_covergroup_summary("CountCov", _hit, _total);
        harc_rt::log::harc_cov_json_summary(log_ctx.coverage_json, "CountCov", _hit, _total);
        harc_rt::log::harc_print_covergroup_bin("cp_count", "low", cp_count.low);
        harc_rt::log::harc_cov_json_bin(log_ctx.coverage_json, "CountCov", "cp_count", "low", cp_count.low);
        harc_rt::log::harc_print_covergroup_bin("cp_count", "mid", cp_count.mid);
        harc_rt::log::harc_cov_json_bin(log_ctx.coverage_json, "CountCov", "cp_count", "mid", cp_count.mid);
        harc_rt::log::harc_print_covergroup_bin("cp_count", "high", cp_count.high);
        harc_rt::log::harc_cov_json_bin(log_ctx.coverage_json, "CountCov", "cp_count", "high", cp_count.high);
        harc_rt::log::harc_print_covergroup_bin("cp_en", "en0", cp_en.en0);
        harc_rt::log::harc_cov_json_bin(log_ctx.coverage_json, "CountCov", "cp_en", "en0", cp_en.en0);
        harc_rt::log::harc_print_covergroup_bin("cp_en", "en1", cp_en.en1);
        harc_rt::log::harc_cov_json_bin(log_ctx.coverage_json, "CountCov", "cp_en", "en1", cp_en.en1);
        {
            uint64_t _cross_hit = 0;
            uint64_t _cross_missing = 0;
            for (size_t _i = 0; _i < 6; ++_i) if (_cross_2_cp_count__cp_en[_i] > 0) _cross_hit++;
            harc_rt::log::harc_print_covergroup_cross_summary("CountCov", "cross", "cp_count x cp_en", _cross_hit, 6);
            harc_rt::log::harc_cov_json_cross_summary(log_ctx.coverage_json, "CountCov", "cross", "cp_count x cp_en", _cross_hit, 6);
            harc_rt::log::harc_cov_json_cross_bin(log_ctx.coverage_json, "CountCov", "cross", "cp_count x cp_en", "cp_count.low x cp_en.en0", _cross_2_cp_count__cp_en[0]);
            if (_cross_2_cp_count__cp_en[0] == 0) { if (_cross_missing < 16) harc_rt::log::harc_print_covergroup_missing_bin("cp_count.low x cp_en.en0"); _cross_missing++; }
            harc_rt::log::harc_cov_json_cross_bin(log_ctx.coverage_json, "CountCov", "cross", "cp_count x cp_en", "cp_count.low x cp_en.en1", _cross_2_cp_count__cp_en[1]);
            if (_cross_2_cp_count__cp_en[1] == 0) { if (_cross_missing < 16) harc_rt::log::harc_print_covergroup_missing_bin("cp_count.low x cp_en.en1"); _cross_missing++; }
            harc_rt::log::harc_cov_json_cross_bin(log_ctx.coverage_json, "CountCov", "cross", "cp_count x cp_en", "cp_count.mid x cp_en.en0", _cross_2_cp_count__cp_en[2]);
            if (_cross_2_cp_count__cp_en[2] == 0) { if (_cross_missing < 16) harc_rt::log::harc_print_covergroup_missing_bin("cp_count.mid x cp_en.en0"); _cross_missing++; }
            harc_rt::log::harc_cov_json_cross_bin(log_ctx.coverage_json, "CountCov", "cross", "cp_count x cp_en", "cp_count.mid x cp_en.en1", _cross_2_cp_count__cp_en[3]);
            if (_cross_2_cp_count__cp_en[3] == 0) { if (_cross_missing < 16) harc_rt::log::harc_print_covergroup_missing_bin("cp_count.mid x cp_en.en1"); _cross_missing++; }
            harc_rt::log::harc_cov_json_cross_bin(log_ctx.coverage_json, "CountCov", "cross", "cp_count x cp_en", "cp_count.high x cp_en.en0", _cross_2_cp_count__cp_en[4]);
            if (_cross_2_cp_count__cp_en[4] == 0) { if (_cross_missing < 16) harc_rt::log::harc_print_covergroup_missing_bin("cp_count.high x cp_en.en0"); _cross_missing++; }
            harc_rt::log::harc_cov_json_cross_bin(log_ctx.coverage_json, "CountCov", "cross", "cp_count x cp_en", "cp_count.high x cp_en.en1", _cross_2_cp_count__cp_en[5]);
            if (_cross_2_cp_count__cp_en[5] == 0) { if (_cross_missing < 16) harc_rt::log::harc_print_covergroup_missing_bin("cp_count.high x cp_en.en1"); _cross_missing++; }
            harc_rt::log::harc_print_covergroup_more_missing(_cross_missing, 16, "cross");
        }
    }
};

struct CovCrossTb {
    VTop* dut = nullptr;
    CountCov cov;
    uint64_t _last_in_cycle = 0;
    uint64_t _last_out_cycle = 0;
};

struct HarcTestContext {
    VerilatedContext verilated;
    VTop* dut = nullptr;
#if HARC_TRACE_ENABLED
    HarcTraceC* tfp = nullptr;
    std::string _wave_path;
#endif
    uint64_t _trace_time = 0;
    int errors = 0;
    bool _fatal = false;
    int cycle_count = 0;
    harc_rt::trace::HarcTraceWriter trace;
    harc_rt::log::HarcLogContext log_ctx;
    harc_rt::random::HarcRng rng;
    std::vector<std::function<void()>> _checkers;
    std::vector<std::function<void()>> _post_eval_services;
    std::vector<std::function<void()>> _auto_cov_reports;
};

int run_CovCrossBinsTest(int argc, char** argv) {
    HarcTestContext ctx;
    ctx.verilated.commandArgs(argc, argv);
    ctx.dut = harc_rt::log::harc_make_dut<VTop>(&ctx.verilated);
    auto* dut = ctx.dut;
#if HARC_TRACE_ENABLED
    auto* tfp = ctx.tfp;
    auto& _wave_path = ctx._wave_path;
#endif
    auto& _trace_time = ctx._trace_time;
    auto& errors = ctx.errors;
    auto& _fatal = ctx._fatal;
    auto& cycle_count = ctx.cycle_count;
    auto& trace = ctx.trace;
    auto& log_ctx = ctx.log_ctx;
    auto& harc_rng = ctx.rng;
    auto harc_rng_next = [&]() { return harc_rng.next(); };
    auto& _checkers = ctx._checkers;
    auto& _post_eval_services = ctx._post_eval_services;
    auto& _auto_cov_reports = ctx._auto_cov_reports;
#if HARC_TRACE_ENABLED
    Verilated::traceEverOn(true);
    tfp = new HarcTraceC;
    _wave_path = harc_rt::log::harc_open_wave_trace(dut, tfp, harc_rt::log::harc_wave_default_name());
#endif

    harc_rng.seed_from_env();
    harc_rt::trace::harc_start_trace(trace, harc_rng.state, "Top", "CovCrossBinsTest", cycle_count);
    auto _harc_trace_dump_next = [&](const char* clock, uint64_t clock_cycle) {
        uint64_t t = _trace_time++;
        trace.set_timing(t, clock, clock_cycle);
        HARC_RT_DUMP_WAVE_TRACE(tfp, t);
    };
    auto _harc_trace_dump_at = [&](uint64_t t, const char* clock, uint64_t clock_cycle) {
        trace.set_timing(t, clock, clock_cycle);
        HARC_RT_DUMP_WAVE_TRACE(tfp, t);
    };

    HARC_RT_LOG_WAVE_FILE(log_ctx.sim_log, _wave_path);


    long long now_ps = 0;
    struct ClockState { const char* name; long long half_period_ps; long long next_edge_ps; int level; long long rising_count; };
    std::vector<ClockState> clocks_;
    clocks_.push_back(ClockState{"clk", 5000, 5000, 0, 0});
    dut->clk = 0;

    auto eval_clocks_until = [&](long long t_ps) {
        while (now_ps < t_ps) {
            long long next = t_ps;
            for (auto& c : clocks_) if (c.next_edge_ps < next) next = c.next_edge_ps;
            now_ps = next;
            bool _primary_rising = false;
            const char* _last_edge_clock = "";
            uint64_t _last_edge_cycle = 0;
            for (size_t i = 0; i < clocks_.size(); i++) {
                auto& c = clocks_[i];
                if (c.next_edge_ps == now_ps) {
                    c.level = !c.level;
                    if (i == 0) dut->clk = c.level;
                    c.next_edge_ps += c.half_period_ps;
                    if (c.level == 1) c.rising_count++;
                    _last_edge_clock = c.name;
                    _last_edge_cycle = (uint64_t)c.rising_count;
                    if (i == 0 && c.level == 1) { cycle_count++; _primary_rising = true; }
                }
            }
            dut->eval();
            // Set the semantic trace timing for this edge *before* running
            // post_eval services so any trace events they emit carry the
            // correct time, but defer the waveform dump until after those
            // services (and the follow-up eval) have settled DUT-visible
            // state. VCD cannot represent two dumps at the same physical
            // timestamp, so we dump exactly once per `now_ps` (issue #477).
            trace.set_timing((uint64_t)now_ps, _last_edge_clock, _last_edge_cycle);
            if (_primary_rising) { for (auto& _svc : _post_eval_services) _svc(); if (!_post_eval_services.empty()) dut->eval(); }
            _harc_trace_dump_at((uint64_t)now_ps, _last_edge_clock, _last_edge_cycle);
        }
    };

    auto tick = [&]() {
        long long target = now_ps + clocks_[0].half_period_ps * 2;
        eval_clocks_until(target);
        for (auto& _c : _checkers) _c();
    };

    auto sim_logf_line = [&](FILE* f, const char* sev, const char* fmt, ...) {
        HARC_RT_LOG_FILE_ONLY_PRINTF(f, cycle_count, sev, fmt);
    };

    auto sim_log_line = [&](const char* sev, const char* fmt, ...) {
        HARC_RT_LOG_PRINTF(log_ctx.sim_log, &trace, cycle_count, sev, fmt);
    };

    // Route an empty-queue pop through the sim's own FATAL path instead
    // of the runtime header's abort backstop: the run records the
    // failure, unwinds normally, and still writes its log and trace.
    // `_fatal` is a loop-exit condition, so the run stops at the next
    // scheduler tick — same semantics as `log(fatal, ...)`. Emitted
    // verbatim by both codegens so the two traces stay diffable.
    harc_rt::HarcQueueFatalScope _queue_fatal_scope([&]() {
        sim_log_line("FATAL", "queue front/pop on an empty queue -- guard it with .empty()/.size(), or wait until the producer has pushed");
        ctx.errors++;
        _fatal = true;
    });

    sim_log_line("INFO", "seed=%llu", (long long)harc_rng.state);

    harc_rt::ThreadScheduler sched;
    CovCrossTb _tb;
    _checkers.push_back([&]() {
        bool _cg_hit_cp_count[3] = {};
        bool _cg_hit_cp_en[2] = {};
        {
            uint64_t _v = (uint64_t)(harc_rt::harc_read(dut->count_out));
            if (((_v >= 0 && _v <= 3))) { _tb.cov.cp_count.low++; _cg_hit_cp_count[0] = true; }
            if (((_v >= 4 && _v <= 9))) { _tb.cov.cp_count.mid++; _cg_hit_cp_count[1] = true; }
            if (((_v >= 10 && _v <= 14) || (_v == 15))) { _tb.cov.cp_count.high++; _cg_hit_cp_count[2] = true; }
        }
        {
            uint64_t _v = (uint64_t)(harc_rt::harc_read(dut->en));
            if (((_v == 0))) { _tb.cov.cp_en.en0++; _cg_hit_cp_en[0] = true; }
            if (((_v == 1))) { _tb.cov.cp_en.en1++; _cg_hit_cp_en[1] = true; }
        }
        for (size_t _i0 = 0; _i0 < 3; ++_i0) {
            for (size_t _i1 = 0; _i1 < 2; ++_i1) {
                if (_cg_hit_cp_count[_i0] && _cg_hit_cp_en[_i1]) {
                    _tb.cov._cross_2_cp_count__cp_en[(_i0 * 2 + _i1)]++;
                }
            }
        }
    });
    harc_rt::ThreadSlot _run_slot;
    sched.slots.push_back(&_run_slot);
    auto _run_slot_lambda = [&](harc_rt::ThreadSlot* _slot) -> harc_rt::HarcThread {
        _tb.dut = dut;
        { // run_CovCrossBinsTest (TB-IR loop-switch)
            uint64_t __t0 = 0; (void)__t0;
            int __bb = 0;
            bool __done = false;
            while (!__done) {
                switch (__bb) {
                case 0: {
                    harc_rt::harc_assign(dut->rst, 1);
                    harc_rt::harc_assign(dut->en, 0);
                    co_await harc_rt::wait_cycles(_slot, (uint32_t)(3));
                    __bb = 1;
                    break;
                }
                case 1: {
                    if (!((harc_rt::harc_read(dut->count_out) == 0))) {
                        sim_log_line("FAIL", "after reset: count_out=%lld, expected 0", harc_rt::harc_printf_ll(harc_rt::harc_read(dut->count_out)));
                        ctx.errors++;
                    }
                    harc_rt::harc_assign(dut->rst, 0);
                    co_await harc_rt::wait_cycles(_slot, (uint32_t)(2));
                    __bb = 2;
                    break;
                }
                case 2: {
                    harc_rt::harc_assign(dut->en, 1);
                    __t0 = 100;
                    int64_t _wu_budget = (int64_t)(__t0);
                    bool _wu_satisfied = co_await harc_rt::wait_until_timeout(_slot, [&]{ return (harc_rt::harc_read(dut->count_out) == 15); }, (uint32_t)_wu_budget);
                    if (_wu_satisfied) { __bb = 3; } else { ctx.errors++; __bb = 4; }
                    break;
                }
                case 3: {
                    if (!((harc_rt::harc_read(dut->count_out) == 15))) {
                        sim_log_line("FAIL", "after wait: count_out=%lld, expected 15", harc_rt::harc_printf_ll(harc_rt::harc_read(dut->count_out)));
                        ctx.errors++;
                    }
                    harc_rt::harc_assign(dut->en, 0);
                    co_await harc_rt::wait_cycles(_slot, (uint32_t)(2));
                    __bb = 5;
                    break;
                }
                case 4: {
                    sim_log_line("FAIL", "count never reached 15");
                    if (!((harc_rt::harc_read(dut->count_out) == 15))) {
                        sim_log_line("FAIL", "  not yet true: dut.count_out == 15");
                    }
                    __bb = 3;
                    break;
                }
                case 5: {
                    sim_log_line("INFO", "PASS: walked 0..15, en toggled at both ends");
                    __done = true;
                    break;
                }
                default: __done = true; break;
                }
            }
        }
        { // check_CovCrossBinsTest (TB-IR loop-switch)
            int __bb = 0;
            bool __done = false;
            while (!__done) {
                switch (__bb) {
                case 0: {
                    _tb.cov.report(log_ctx);
                    if (!((_tb.cov.cp_count.low > 0))) {
                        sim_log_line("FAIL", "low range bin hole");
                        ctx.errors++;
                    }
                    if (!((_tb.cov.cp_count.mid > 0))) {
                        sim_log_line("FAIL", "mid range bin hole");
                        ctx.errors++;
                    }
                    if (!((_tb.cov.cp_count.high > 0))) {
                        sim_log_line("FAIL", "high range bin hole");
                        ctx.errors++;
                    }
                    if (!((_tb.cov.cp_en.en0 > 0))) {
                        sim_log_line("FAIL", "en=0 bin hole");
                        ctx.errors++;
                    }
                    if (!((_tb.cov.cp_en.en1 > 0))) {
                        sim_log_line("FAIL", "en=1 bin hole");
                        ctx.errors++;
                    }
                    sim_log_line("INFO", "coverage assertions passed");
                    __done = true;
                    break;
                }
                default: __done = true; break;
                }
            }
        }
        co_return;
    };
    _run_slot.thread = _run_slot_lambda(&_run_slot);

    // Resume each coroutine once so initial-setup statements run
    // before the first clock edge. Single-threaded — workers
    // haven't been spawned yet.
    sched.bootstrap();

    // Drive the clock until the run coroutine completes.
    //
    // `wait N cycles` matches Verilog's `@(posedge clk)` semantic:
    // values set in the segment BEFORE the wait are sampled at the
    // next posedge. Per loop iteration:
    //   1. Posedge (clk 0→1, eval) — DUT FFs latch the current input
    //      values (set in the previous segment, or in bootstrap on
    //      the first iteration).
    //   2. `sched.tick()` — advance the run coroutine to its next
    //      wait, setting the inputs for the NEXT cycle's posedge.
    //   3. Falling edge (clk 1→0, eval) — comb re-settles with the
    //      newly-set inputs.
    //   4. Cycle counter + checkers.
    // One initial `eval(clk=0)` before the loop settles combinational
    // logic with the bootstrap inputs — same role as `initial`-block
    // settle in Verilog. Each `wait 1 cycle` then maps to exactly
    // one posedge that observes the just-set values.
    dut->eval();
    _harc_trace_dump_at((uint64_t)now_ps, "", 0);
    while (_run_slot.kind != harc_rt::WaitKind::Done && !_fatal) {
        long long _target = now_ps + clocks_[0].half_period_ps * 2;
        eval_clocks_until(_target);
        sched.tick();
        for (auto& _c : _checkers) _c();
    }


    for (auto& _r : _auto_cov_reports) _r();
    _auto_cov_reports.clear();
    _post_eval_services.clear();
    _checkers.clear();
    harc_rt::harc_destroy_scheduler_threads(sched);
    dut->final();
    HARC_RT_WRITE_COVERAGE(ctx.verilated.coveragep());
    HARC_RT_CLOSE_WAVE_TRACE(tfp);
    delete dut;

    return harc_rt::log::harc_finish_sim_run(log_ctx, trace, cycle_count, errors);
}

int main(int argc, char** argv) {
    const char* test_sel = harc_rt::log::harc_select_test(argc, argv);
    if (!test_sel) return run_CovCrossBinsTest(argc, argv);
    if (std::strcmp(test_sel, "CovCrossBinsTest") == 0) return run_CovCrossBinsTest(argc, argv);
    harc_rt::log::harc_report_unknown_test(test_sel, "CovCrossBinsTest");
    return 1;
}
